--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 /.pnp
 .pnp.js
 
+
 # testing
 /coverage
 
@@ -21,3 +22,11 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+*.zip
+
+README.md
+TODO.md
+
+/src2
+GitHubDesktop-linux-2.6.3-linux1.deb
